# share-clip

./: README.md  TODO.md  config.toml  file_share.html  package.json  pnpm-lock.yaml  setting.html  tailwind.config.ts  vite.config.ts
src/: App.tsx  App.vue  file_share.js  index.css  setting.js
src-tauri/: .env  .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migration/: Cargo.toml
src-tauri/migration/src/: m20220101_000001_create_table.rs
src-tauri/src/: clipboard.rs  config.rs  entities.rs  error.rs  lib.rs  main.rs  services.rs  shortcuts.rs  utils.rs
src-tauri/src/app/: config.rs  mod.rs  shortcut.rs  window.rs
src-tauri/src/app/commands/: clipboard.rs
src-tauri/src/app/shortcuts/: global.rs
src-tauri/src/app/ui/: tray.rs  window.rs
src-tauri/src/db/: connection.rs  mod.rs
src-tauri/src/db/repository/: clipboard_record.rs  mod.rs
src-tauri/src/db/service/: cleanup.rs  clipboard.rs  mod.rs
src-tauri/src/entity/: clipboard.rs  clipboard_record.rs  mod.rs  prelude.rs  status.rs
src-tauri/src/models/: clipboard.rs
src-tauri/src/platform/: automation.rs  mod.rs  non_activating.rs  system_info.rs
src-tauri/src/platform/automation/: linux.rs  macos.rs  windows.rs
src-tauri/src/plugins/: mod.rs  non_activating.rs
src-tauri/src/services/: clipboard_storage.rs  clipboard_watcher.rs
src-tauri/src/utils/: format.rs  image.rs  mod.rs
src/api/: clipboard.js  clipboard.ts  core.ts
src/api/types/: clipboardRecord.ts
src/components/: ClipboardItem.vue
src/components/clipboard/: ClipboardListItem.tsx
src/components/ui/: badge.tsx  button.tsx  card.tsx  dialog.tsx  dropdown-menu.tsx  tooltip.tsx
src/models/: clipboardRecord.mapper.ts  clipboardRecord.ts
src/service/: clipboardRecordService.ts
src/views/fileshare/: index.vue
src/views/setting/: index.vue
