[package]
name = "share-clip"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = ["tray-icon", "image-ico"] }
tauri-plugin-shell = "2.0.0-beta"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-clipboard-manager = "2.1.0-beta.4"
tauri-plugin-store = "2.0.0-beta.9"
[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-global-shortcut = "2.0.0-beta"
tokio = { version = "1", features = ["full"] }
sea-orm = {version = "0.12", features = ["macros", "sqlx-sqlite", "runtime-tokio-native-tls"] }
chrono = { version = "0.4", features = ["serde"] }
strum = "0.26"
strum_macros = "0.26"
clipboard-rs = "0.1.9" # 剪切板
#sea-orm-migration = "0.12"
#sea-orm-macros = "0.12"
