[package]
name = "share-clip"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "share_clip_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "unstable"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
sea-orm = { version = "1", features = [
    "macros",
    "with-chrono",
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "chrono"] }
chrono = "0.4"
migration = { path = "migration" }
windows = { version = "0.60", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_UI_Accessibility", "UI_UIAutomation", "Win32_System_Com", "Win32_UI_Controls", "Win32_UI_HiDpi", "Win32_System_Ole", "Win32_System_DataExchange", "Win32_System_Memory", "Win32_UI_Shell", "Win32_Graphics"] }
objc = "0.2.7"
once_cell = "1.21.3"
parking_lot = "0.12.5"
thiserror = "2.0.18"
anyhow = "1.0.101"
uuid = { version = "1.20.0", features = ["v4"] }
tracing = "0.1.44"
sentry = "0.46.2"
arboard = "3.6.1"
enigo = "0.6"
clipboard-win = "5.4.1"
image = "0.25.9"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = [
    "winuser",      # SetWindowsHookExW, CallNextHookEx, UnhookWindowsHookEx, WH_KEYBOARD_LL, KBDLLHOOKSTRUCT, HC_ACTION, GetAsyncKeyState, VK_*
    "libloaderapi", # GetModuleHandleW
    "errhandlingapi", # 可选，GetLastError
    "impl-default",   # winapi辅助
    "windef",
] }
tauri-plugin-global-shortcut = "2"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9"
objc = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
x11rb = "0.13"
